--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "classnames": "^2.3.1",
     "firebase": "^9.8.4",
     "next": "^12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-icons": "^4.4.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
