--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^12.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.37.0",
     "react-icons": "^4.4.0",
     "uuid": "^8.3.2"
   },
