--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.7.0",
     "classnames": "^2.3.1",
+    "emailjs-com": "^3.2.0",
     "firebase": "^9.8.4",
     "next": "^12.1.6",
     "react": "^18.2.0",
