--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.37.0",
     "react-icons": "^4.4.0",
+    "react-toastify": "^9.0.8",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
