--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.7.0",
+    "@next/font": "^13.0.2",
     "classnames": "^2.3.1",
     "emailjs-com": "^3.2.0",
     "firebase": "^9.8.4",
